include_directories("${CMAKE_CURRENT_SOURCE_DIR}")

add_subdirectory(empty_template)
add_subdirectory(text)
add_subdirectory(comments)
add_subdirectory(param_ref)
add_subdirectory(template_ref)
add_subdirectory(param_join)
add_subdirectory(join_no_text)
add_subdirectory(if_param)
add_subdirectory(if_join_param)
add_subdirectory(if_joined_condition)
add_subdirectory(with)
add_subdirectory(join_external_param)
add_subdirectory(relative_names)
add_subdirectory(with_relative_name)

# Extensions 
add_subdirectory(with_join)
add_subdirectory(if_join)
add_subdirectory("elseif")
add_subdirectory(param_rjoin)
add_subdirectory(indent_param)